Wed Sep 16 20:22:03 GMT 2015  Olly Betts <olly@survex.com>

	* diritor.cc: Avoid magic_descriptor() in libmagic < 5.15 as it
	  closes the fd passed to it.  The magic_descriptor() code path isn't
	  actually used currently, so this issue doesn't cause omindex to
	  misbehave.

Tue Sep 15 22:52:24 GMT 2015  Olly Betts <olly@survex.com>

	* index_file.cc,index_file.h,omindex.cc: Pass in Document object and
	  string for record so extra data can be added before the file is
	  indexed.

Mon Sep 14 03:15:50 GMT 2015  Olly Betts <olly@survex.com>

	* index_file.cc,index_file.h,omindex.cc: Move setting of default
	  command filters into index_file.cc.

Mon Sep 14 00:54:36 GMT 2015  Olly Betts <olly@survex.com>

	* Makefile.am,mime.cc,mime.h,omindex.cc: Factor out the code to find
	  a MIME type for a file.

Sat Sep 12 05:22:16 GMT 2015  Olly Betts <olly@survex.com>

	* docs/Makefile.am: Remove bogus '.' from rm command.

Fri Sep 11 04:42:53 GMT 2015  Olly Betts <olly@survex.com>

	* omindex.cc: Tweak order of constant definitions.

Fri Sep 11 04:42:27 GMT 2015  Olly Betts <olly@survex.com>

	* index_file.cc,index_file.h: Factor out index_add_document() function.

Thu Sep 10 20:43:47 GMT 2015  Olly Betts <olly@survex.com>

	* Makefile.am,index_file.cc,index_file.h,omindex.cc: Refactor to start
	  to split out the code to index a file.

Thu Sep 10 07:30:25 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac,docs/Makefile.am: Fix generation of overview.rst when
	  srcdir != builddir.

Thu Sep 10 05:56:12 GMT 2015  Olly Betts <olly@survex.com>

	* omindex.cc: Use SAMPLE_SIZE in help text rather than literal 512.
	  Add '--title-size' option.

Wed Sep 09 04:28:43 GMT 2015  Olly Betts <olly@survex.com>

	* omindex.cc: Fix comment typo.

Tue Sep 08 04:31:51 GMT 2015  Olly Betts <olly@survex.com>

	* docs/omegascript.rst,query.cc: Fix documentation of $last to say
	  it's the MSet index *one beyond* the end of the current page.
	  Reported by Andrew Chilton.
